Added Redis database to project

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,11 @@
 services:
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
   backend:
+    depends_on: 
+      - redis
     build:
       context: ./backend
     working_dir: /app
